[tool.poetry]
name = "toads"
version = "0.1.3"
description = "Data Science tools from preprocessing and visualization to statistics and ML"
authors = ["Ivan Rychkov <rychkov.ivan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
numpy = "^1.23.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"
redis = "^4.3.4"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
